# robot_modeling

./: .gitignore  LICENSE  README  hmi_bridge.py  moveit_hmi.py
misc/: .~lock.poses.ods#  Knight.STL  ZwischenPräsentation_Faber_Kulovits.pptx  gazebo_painting_cell.urdf  poses.ods
misc/urdf_robot_flo/: CMakeLists.txt
misc/urdf_robot_simon/: package.xml
painting_cell/: CMakeLists.txt  package.xml
painting_cell/config/: joint_names_urdf_painting_cell.yaml
painting_cell/launch/: display.launch  (+1 more)
painting_cell_moveit/: .setup_assistant  CMakeLists.txt  package.xml  paint.sh
painting_cell_moveit/config/: fake_controllers.yaml  gazebo_painting_cell.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  painting_cell.srdf  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  urdf_painting_cell.srdf
painting_cell_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
painting_cell_moveit/scripts/: hmi_bridge.py  moveitHMI.ui  moveit_hmi.py  multimove.py  paint.py  set_physics.py  swivel.py  testprogram1.py
urdf_painting_cell/: CMakeLists.txt  package.xml
urdf_robot_flo/: package.xml
urdf_robot_simon/: CMakeLists.txt
(+33 files in other folders)
